--- a/pools EDA/AL/pool4exploration.Rmd
+++ b/pools EDA/AL/pool4exploration.Rmd
@@ -149,6 +149,7 @@ sapply(water_var, plotter_box_by_year, water_4L, F)
 sapply(water_var, plotter_box_by_year, water_4L, T)
 
 
+
 # SS, turbidity, and secchi all three measure water quality
 
 # velocity graph is new
@@ -166,6 +167,7 @@ hist(water_4L$STRATUM)
 
 ```
 
+Note: stratum types
 1 = Main channel
 2 = Side channel
 3 = Backwater area contiguous to the main channel
@@ -174,7 +176,7 @@ hist(water_4L$STRATUM)
 
 * total nitrogen is variable by year, but within year, not too variable
 
-* velocity has increased, water volume is greater
+* velocity has increased, water volume is greater. increase in velocity reflects collection in data? collect
 
 * 
 
