Data Interpolation work began

--- a/pools EDA/FM/InitialAnalysis.ipynb
+++ b/pools EDA/FM/InitialAnalysis.ipynb
@@ -56,9 +56,7 @@
       "      dtype='object', length=131)\n",
       "(204310, 131)\n",
       "(30090, 131)\n",
-      "(6399, 74)\n",
-      "dub\n",
-      "(2292, 131)\n"
+      "(6399, 74)\n"
      ]
     }
    ],
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "5ac81094-61b2-4d3c-8f95-6c0f46d3e25e",
    "metadata": {},
    "outputs": [
@@ -275,7 +273,7 @@
        "max      433.000000  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +281,8 @@
    "source": [
     "# initial analysis with a bunch of box plots \n",
     "continuous = ['TN','TP','TEMP','DO','TURB','COND','VEL','SS','WDP','CHLcal','SECCHI']\n",
-    "water_data[continuous].describe()"
+    "water_data[continuous].describe()\n",
+    "# print(water_data[continuous].isnull().sum())"
    ]
   },
   {
