Added QF codes and fldnum value to R code

--- a/water data cleaning.Rmd
+++ b/water data cleaning.Rmd
@@ -38,7 +38,7 @@ library(RColorBrewer)
 ```
 
 ```{r}
-water20 <- read.csv(file = "pools EDA/pool data/ltrm_water_data_lat_long.csv")
+water20 <- read.csv(file = "C:\\Users\\forre\\Desktop\\REU\\TDA\\Data\\ltrm_water_data_lat_long_06072021.csv")
 ```
 
 ## Important variables
@@ -50,7 +50,7 @@ water_var <- c('TN','TP','TEMP','DO','TURB',
 
 waterQF_var <- paste(water_var, "QF", sep = "")
 
-identifier_var <- c('SHEETBAR', 'DATE', 'LATITUDE', 'LONGITUDE')
+identifier_var <- c('SHEETBAR', 'DATE', 'LATITUDE', 'LONGITUDE', 'FLDNUM')
 
 ```
 
@@ -175,8 +175,9 @@ WDP,
 filterwater <- water20 %>%
   filter(CALCZCD == "SF") %>%
   select(all_of(c(identifier_var, water_var, waterQF_var))) %>%
-  filter_at(vars(contains("QF")), all_vars(. != 8)) # forrest, edit this
-
+  filter_at(vars(c("TURBQF","TEMPQF","DOQF","VELQF","ZMAXQF","SECCHIQF","CONDQF")), any_vars(. != "A" | . != 0)) %>%
+  # forrest, edit this
+  filter_at(vars(c("TNQF","TPQF","SSQF")), all_vars(. != 8 | . != 64))
 filterwater %>% head()
 ```
 
@@ -186,3 +187,7 @@ dim(filterwater)
 
 use this tutorial about `filter_at`
 https://suzan.rbind.io/2018/02/dplyr-tutorial-3/
+
+```{r}
+write.csv(filterwater, "C:\\Users\\forre\\Desktop\\REU\\TDA\\Data\\water_data_filtered.csv", row.names = FALSE)
+```
