--- a/pools EDA/AS/data_collapse.ipynb
+++ b/pools EDA/AS/data_collapse.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "# The data at this point will have already been filtered by its QF code and by its CALCZCD\n",
     "# The data set should consist of only surface level points \n",
-    "data = pd.read_csv(\"../pool data/ltrm_water_data_lat_long.csv\")\n"
+    "data = pd.read_csv(\"../\")\n"
    ]
   },
   {
